# google-acc-save

./: .env  README.md  auth.py  config.py  globals.py  main.py  pyproject.toml  run.py  test.py  utils.py  代理国家列表 - IPIDEA.csv
app/: config.py  main.py
app/curd/: proxy.py  status.py
app/dependencies/: auth.py  auth_middleware.py  countries.py  globals.py  proxy.py  utils.py
app/entity/: install_app_enum.py
app/models/: accounts.py  config.py  proxy.py  status.py
app/routers/: __init__.py  accounts.py  auth.py  config.py  pad_code.py  proxy.py  proxy_collection.py  server.py  statistics.py  status.py  websocket.py
app/services/: check_task.py  database.py  every_task.py  logger.py  task_status.py  websocket_manager.py
database/: data.sql  proxy.sql  status.sql
static/: index.html
static/css/: comm.css  config.css  index.css  login.css  pade_code.css  proxy.css  statistics.css
static/js/: comm.js  config.js  index.js  login.js  pade_code.js  proxy.js  statistics.js
templates/: config.html  index.html  login.html  pad_code_management.html  pade_code.html  proxy_collection.html  statistics.html
tests/: test.py
